--- a/index.html
+++ b/index.html
@@ -712,6 +712,10 @@
             style="color: var(--accent-orange); background: none; border: none; cursor: pointer; text-decoration: underline;">
             🔑 Şifremi Unuttum </button>
         </div>
+        <div class="text-right"
+          style="text-align: right; margin-top: 15px; font-size: 10px; color: var(--text-secondary); opacity: 0.6; font-weight: 500;">
+          Mustafa Kartın
+        </div>
       </div>
       <div id="forgotPasswordForm" style="display: none;">
         <h3 class="text-xl font-bold mb-4 text-center">🔑 Şifremi Unuttum</h3>
